--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,4 +25,8 @@ mybatis-plus:
   mapper-locations: classpath:mapper/**/*.xml
   #实体扫描，多个package用逗号或者分号分隔
   typeAliasesPackage: com.demo.entity.*.entity
+  
+testParam:
+  test: 100
+                
                 
