--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,22 @@
 		</dependency>
 		<!--集成mybatis -->
 
-
+		<!--XML解析 -->
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.4.9</version>
+		</dependency>
+		<dependency>    
+		    <groupId>net.sf.json-lib</groupId>    
+		    <artifactId>json-lib</artifactId>    
+		    <version>2.4</version>    
+		    <classifier>jdk15</classifier>    
+		</dependency>
 		<!-- 使用数据源 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
