--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,25 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/maven/apache-maven-3.5.4/repository/commons-fileupload/commons-fileupload/1.3.1/commons-fileupload-1.3.1.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.archivename" value="commons-fileupload-1.3.1.jar"/>
+			<attribute name="maven.groupId" value="commons-fileupload"/>
+			<attribute name="maven.artifactId" value="commons-fileupload"/>
+			<attribute name="maven.version" value="1.3.1"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/maven/apache-maven-3.5.4/repository/commons-codec/commons-codec/1.10/commons-codec-1.10.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.archivename" value="commons-codec-1.10.jar"/>
+			<attribute name="maven.groupId" value="commons-codec"/>
+			<attribute name="maven.artifactId" value="commons-codec"/>
+			<attribute name="maven.version" value="1.10"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
