--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
+		<mybatisplus.spring.boot.stater.version>1.1.1</mybatisplus.spring.boot.stater.version>
+		<springfox-swagger-ui.version>2.6.0</springfox-swagger-ui.version>
+		<springfox-swagger2.version>2.6.0</springfox-swagger2.version>
+		<commons-io.version>2.4</commons-io.version>
+		<mail.version>1.4.4</mail.version>
+		<commons.version>3.0.0</commons.version>
+		<pinyin4j.version>2.5.0</pinyin4j.version>
 	</properties>
 
 	<dependencies>
@@ -42,24 +49,24 @@
 		<dependency>
 			<groupId>com.cedarsoft.commons</groupId>
 			<artifactId>commons</artifactId>
-			<version>3.0.0</version>
+			<version>${commons.version}</version>
 		</dependency>
 		<!-- 汉语拼音工具包 -->
 		<dependency>
 			<groupId>com.belerweb</groupId>
 			<artifactId>pinyin4j</artifactId>
-			<version>2.5.0</version>
+			<version>${pinyin4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
+			<version>${commons-io.version}</version>
 		</dependency>
 		<!-- 邮件发送 -->
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
-			<version>1.4.4</version>
+			<version>${mail.version}</version>
 		</dependency>
 		<!-- Springboot -->
 		<dependency>
@@ -77,6 +84,17 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<!-- mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -85,15 +103,13 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.6.0</version>
+			<version>${springfox-swagger2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.6.0</version>
+			<version>${springfox-swagger-ui.version}</version>
 		</dependency>
-		<!--集成mybatis -->
-
 		<!--XML解析 -->
 		<dependency>
 			<groupId>dom4j</groupId>
@@ -123,24 +139,17 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
-		<!-- mybatis -->
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>3.2.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
-			<version>1.2.2</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.47</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
