--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 	
 	<dependencies>
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.3.6.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version><!--$NO-MVN-MAN-VER$ -->
